<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嘉大助手2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="personal_login">登陸</string>
    <string name="personal_my_focus">随便</string>

    
    <string name="category_at">类型：%s</string>
    <string name="place_at">地点：%s</string>
    <string name="join_number">已报名：%s人</string>
    <string name="join_and_need_number" formatted="false">已报名：%1s人/需求人数：%2s</string>
    <string name="contacts_of">联系方式：%1s</string>
    <string name="ture_name">真实姓名：%1s</string>
    <string name="lost_location">丢失地点：%1s</string>
    <string name="found_location">捡到地点：%1s</string>
    <string name="lost_time">丢失时间：%1s</string>
    <string name="found_time">捡到时间：%1s</string>
    <string name="lost_type">物品类型：%1s</string>
    <string name="lost_ilabel">物品标签：%1s</string>
    <string name="lost_llabel">地点标签：%1s</string>
    <string name="lost_description">物品详细描述：%1s</string>
    <string name="time_at">活动时间：%s</string>
    <string name="publish_name">发起者：%s</string>
    
    <string name="fragemt_findout">发现</string>
    <string name="fragemt_news">新闻中心</string>
    <string name="fragemt_myjyu">我的嘉大</string>
    <string name="fragemt_setting">设置</string>
    
    <string name="lostpublish_title">标题:</string>
    <string name="lostpublish_title_hint">请输入你的标题</string>
    <string name="lostpublis_location">丢失地点:</string>
    <string name="lostpublish_location_hint">请输入物品的丢失地点</string>
    <string name="lostpublish_losttime">丢失时间:</string>
    <string name="lostpublish_losttime_hint">请输入物品丢失时间</string>
    
</resources>
